form stuff and styling

--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -96,6 +96,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class:"mdl-button mdl-js-button mdl-button--raised mdl-button--colored" %>
   </div>
 <% end %>
