--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @shop.name %>
+  <h4><strong>Name:</strong>
+  <%= @shop.name %></h4>
 </p>
 
 <p>
