--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,6 +14,16 @@ p, ol, ul, td {
   margin: 33px;
 }
 
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 1.1rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
 pre {
   background-color: #eee;
   padding: 10px;
@@ -51,6 +61,24 @@ div {
 
 #notice {
   color: green;
+}
+
+label {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+input[type="text"] {
+  width: 190px;
+  height: 20px;
+  font-size: 1rem;
+}
+
+input[type="submit"]{
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+  padding-top: 1px;
 }
 
 .field_with_errors {
