--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Manufacturers</h1>
+<h3>Manufacturers</h3>
 
 <table>
   <thead>
@@ -19,7 +19,7 @@
         <td><%= manufacturer.name %></td>
         <td><%= manufacturer.location %></td>
         <td><%= manufacturer.country %></td>
-        <td><%= manufacturer.website %></td>
+        <td><%= link_to manufacturer.website, manufacturer.website, target:"blank" %></td>
         <td><%= link_to 'Show', manufacturer %></td>
         <td><%= link_to 'Edit', edit_manufacturer_path(manufacturer) %></td>
         <td><%= link_to 'Destroy', manufacturer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
