--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Bikes</title>
     <%= csrf_meta_tags %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -16,7 +18,7 @@
   <body>
     <nav>
       <ul class="main_menu">
-        <li><%= link_to "Enter New Shop", new_shop_path %></li>
+        <li><%= link_to "New Shop", new_shop_path %></li>
         <li><%= link_to "Shops", shops_path %></li>
         <li><%= link_to "Manufacturers", manufacturers_path %></li>
       </ul>
