--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -94,8 +94,9 @@ label {
 
 input[type="text"] {
   width: 190px;
-  height: 20px;
+  height: 29px;
   font-size: 1rem;
+  padding: 3px 5px;
 }
 
 input[type="submit"]{
