--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Website:</strong>
-  <%= @shop.website %>
+  <%= link_to @shop.website, @shop.website, target:"blank" %>
 </p>
 
 <p>
