--- a/app/views/manufacturers/_form.html.erb
+++ b/app/views/manufacturers/_form.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <%= form_for(manufacturer) do |f| %>
   <% if manufacturer.errors.any? %>
     <div id="error_explanation">
