--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -29,7 +29,7 @@
       <tr>
         <td><%= shop.name %></td>
         <td><%= shop.location %></td>
-        <td><%= shop.website %></td>
+        <td><%= link_to "Website", shop.website, target:"blank" %></td>
         <td><%= shop.street1 %></td>
         <td><%= shop.street2 %></td>
         <td><%= shop.city %></td>
