--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         <li><%= link_to "New Shop", new_shop_path %></li>
         <li><%= link_to "Shops", shops_path %></li>
         <li><%= link_to "Manufacturers", manufacturers_path %></li>
+        <li><%= link_to "Search", search_path %></li>
       </ul>
     </nav>
     <%= yield %>
