--- a/app/views/manufacturers/edit.html.erb
+++ b/app/views/manufacturers/edit.html.erb
@@ -1,6 +1,6 @@
 <h3>Editing Manufacturer</h3>
 
-<%= render 'form', manufacturer: @manufacturer %>
+<%= render 'edit_form', manufacturer: @manufacturer %>
 
 <%= link_to 'Show', @manufacturer %> |
 <%= link_to 'Back', manufacturers_path %>
